--- a/produtos.html
+++ b/produtos.html
@@ -23,6 +23,7 @@
                 </nav>
             </div>
         </header>
+
          <main>
             <ul class="produtos">
                 <li>
@@ -45,5 +46,11 @@
                 </li> 
             </ul>
          </main>
+
+         <footer>
+             <img src="logo-branco.png" alt="" srcset="">
+             <p>Copyright Barbearia Alura - 2021</p>
+
+         </footer>
     </body>
 </html>
