finalizando formatação do footer

--- a/produtos.html
+++ b/produtos.html
@@ -49,7 +49,7 @@
 
          <footer>
              <img src="logo-branco.png" alt="" srcset="">
-             <p>Copyright Barbearia Alura - 2021</p>
+             <p class="Copyright">&copy; Copyright Barbearia Alura - 2021</p>
 
          </footer>
     </body>
