--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
 		<meta charset="UTF-8">
 		<title>Home - Barbearia Alura</title>
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="reset.css">
 	</head>
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
-		</header>
+            <div class="caixa">
+                <h1><img src="logo.png" alt=""></h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+			
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
+			
 			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 	 
 			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -24,7 +35,7 @@
 		<div class="beneficios">
 			<h3 class="titulo-centralizado">Benefícios</h3>
 
-			<ul>
+			<ul id="itens">
 				<li class="itens">Atendimento aos Clientes</li>
 				<li class="itens">Espaço diferenciado</li>
 				<li class="itens">Localização</li>
