--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
                 <h1><img src="logo.png" alt=""></h1>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">HOme</a></li>
                         <li><a href="produtos.html">Produtos</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
             </div>
-			
+
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
 			
