Formatando footer pagina Home

--- a/index.html
+++ b/index.html
@@ -44,5 +44,10 @@
 
 			<img src="beneficios.jpg" class="imagembeneficios">
 		</div>
+
+		<footer>
+			<img src="logo.png" alt="">
+			<p class="Copyright">&copy; Copyright Barbearia Alura - 2021</p>
+		</footer>
 	</body>
 </html>
