--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</div>
 
 		<footer>
-			<img src="logo.png" alt="">
+			<img src="logo-branco.png" alt="">
 			<p class="Copyright">&copy; Copyright Barbearia Alura - 2021</p>
 		</footer>
 	</body>
