--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
         <!-- Header -->
         <header>
             <div class="caixa">
-                <h1><img src="logo.png" alt=""></h1>
+                <h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">HOme</a></li>
@@ -71,7 +71,7 @@
 
         <!-- Footer -->
         <footer>
-            <img src="logo-branco.png" alt="">
+            <img src="logo-branco.png" alt="Logo da Barbearia Alu">
             <p class="Copyright">&copy; Copyright Barbearia Alura - 2021</p>
         </footer>
 		<!-- Fim footer -->
