--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
             <div class="caixa">
-                <h1><img src="logo.png" alt=""></h1>
+                 <h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">HOme</a></li>
@@ -47,8 +47,8 @@
 		</div>
 
 		<footer>
-			<img src="logo-branco.png" alt="">
-			<p class="Copyright">&copy; Copyright Barbearia Alura - 2021</p>
-		</footer>
+            <img src="logo-branco.png" alt="Logo da Barbearia Alura">
+            <p class="Copyright">&copy; Copyright Barbearia Alura - 2021</p>
+        </footer>
 	</body>
 </html>
