--- a/produtos.html
+++ b/produtos.html
@@ -48,9 +48,8 @@
          </main>
 
          <footer>
-             <img src="logo-branco.png" alt="" srcset="">
-             <p class="Copyright">&copy; Copyright Barbearia Alura - 2021</p>
-
-         </footer>
+            <img src="logo-branco.png" alt="Logo da Barbearia Alura">
+            <p class="Copyright">&copy; Copyright Barbearia Alura - 2021</p>
+        </footer>
     </body>
 </html>
