--- a/contato.html
+++ b/contato.html
@@ -71,7 +71,7 @@
 
         <!-- Footer -->
         <footer>
-            <img src="logo-branco.png" alt="Logo da Barbearia Alu">
+            <img src="logo-branco.png" alt="Logo da Barbearia Alura">
             <p class="Copyright">&copy; Copyright Barbearia Alura - 2021</p>
         </footer>
 		<!-- Fim footer -->
