--- a/contato.html
+++ b/contato.html
@@ -64,7 +64,7 @@
                 <label for=""> <input type="checkbox" class="checkbox" checked> Gostaria de receber nossas novidades por email ?</label>
 
 
-                <input type="submit" value="Enviar formulário" name="" id="" >
+                <input type="submit" value="Enviar formulário" class="enviar" name="" id="" >
             </form>
         </main>
         <!--  -->
