--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 		<!-- fim navbar -->
 	
 
-		<img id="banner" src="banner.jpg">
+		<img class="banner" src="banner.jpg">
 
 		<!-- começo conteudo -->
 		<main>
 			<section class="principal">
 				
-				<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+				<h2 class="titulo-princial">Sobre a Barbearia Alura</h2>
 		
 				<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -43,7 +43,7 @@
 			</section> 
 
 			<section class="beneficios">
-				<h3 class="titulo-centralizado">Benefícios</h3>
+				<h3 class="titulo-princial">Benefícios</h3>
 
 				<ul id="itens">
 					<li class="itens">Atendimento aos Clientes</li>
