estudando seletores avançados no css

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 		</header>
 
 		<img class="banner" src="banner.jpg">
-
+		
 		<main>
+			<p >qualquer teste</p>
 			<section class="principal">
 				<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
