folha de estilo só pra estudos de elementos e estudos futuros

--- a/seletores_avancados.html
+++ b/seletores_avancados.html
@@ -6,48 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>seletores avançados</title>
+    <link rel="stylesheet" href="avancado.css">
 </head>
-    <style>
-        div{
-            width: 90%;
-            margin: 0 auto;
-        }
-        .container{
-            width: 90%;
-            margin: 0 auto;
-            border: 2px solid black;
-            padding: 16px;
-            border-radius: 8px;
-        }
-        div.container > h2{
-            background-color: black;
-            color: white;
-            text-align: center;
-        }
-
-        body{
-            margin-top: 20px;
-        }
-        h2{
-            text-transform: uppercase;
-        }
-        main > p {
-            background-color: red;
-        }
-    
-        img ~ p {
-            background-color: yellow;
-        }
-        img + p {
-            background-color: blue;
-            color: white;
-        }
-        .principal p:not(#teste){
-            background-color: orange;
-            font-size: 20px;
-            text-transform: uppercase;
-        }
-    </style>
+   
     <body> 
         <div class="container">
             <h2>seletores avançados - formatado</h2>
