update final do dia de hoje

--- a/seletores_avancados.html
+++ b/seletores_avancados.html
@@ -9,30 +9,32 @@
     <link rel="stylesheet" href="avancado.css">
 </head>
    
-    <body> 
+    <body>
         <div class="container">
-            <h2>seletores avançados - formatado</h2>
-            <main>
-                <p>qualquer coisas</p>
-                <img src="" alt="">
-                <p>qualquer coisa em azul</p>
-                <p>qualquer coisa</p>
-            </main>
-            
-            <section class="principal">
-                <p id="teste">qualquer coisa</p>
-                <p>qualquer coisa</p>
-                <p id="teste">qualquer coisa</p>
-                <p>qualquer coisa</p>
-                <p id="teste">qualquer coisa</p>
-                <p>qualquer coisa</p>
-                <p id="teste">qualquer coisa</p>
-                <p>qualquer coisa</p>
-            </section>
+            <div class="box">
+                <h2>seletores avançados - formatado</h2>
+                <main>
+                    <p>qualquer coisas</p>
+                    <img src="" alt="">
+                    <p>qualquer coisa em azul</p>
+                    <p>qualquer coisa</p>
+                </main>
+                
+                <section class="principal">
+                    <p id="teste">qualquer coisa</p>
+                    <p>qualquer coisa</p>
+                    <p id="teste">qualquer coisa</p>
+                    <p>qualquer coisa</p>
+                    <p id="teste">qualquer coisa</p>
+                    <p>qualquer coisa</p>
+                    <p id="teste">qualquer coisa</p>
+                    <p>qualquer coisa</p>
+                </section>
+            </div> 
+            <hr>
+                <div>
+                    <h2>seletores avançados </h2>
+                </div>
         </div> 
-            <div>
-                <h2>seletores avançados </h2>
-            </div>
-
     </body>
 </html>
