--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 						<li class="itens">Profissionais Qualificados</li>
 						<li class="itens">Pontualidade</li>
 						<li class="itens">Limpeza</li>
-					</ul><img src="beneficios.jpg" class="imagembeneficios">
+					</ul><img src="beneficios.jpg" class="imagem-beneficios">
 					
 				</div>
 
 				<div class="video">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>	
 			</section>
 		</main>
